[gd_scene load_steps=10 format=3 uid="uid://yy53in46kswg"]

[ext_resource type="Script" path="res://Scenes/screens/photo_splash_screen.gd" id="1_6y58m"]
[ext_resource type="Texture2D" uid="uid://bhytpdfeak08a" path="res://IMG_6630_halftone.jpg" id="2_klajs"]
[ext_resource type="Texture2D" uid="uid://cq8dk06og7488" path="res://photo1.png" id="2_ocw41"]
[ext_resource type="Texture2D" uid="uid://d07hyrxad6lec" path="res://photo2.png" id="3_80f4q"]
[ext_resource type="Texture2D" uid="uid://dbfve83aaryxs" path="res://photo3.png" id="4_8v0bh"]
[ext_resource type="Texture2D" uid="uid://bp8eiv15o05dj" path="res://photo4.png" id="5_wcjt3"]

[sub_resource type="Animation" id="Animation_cos0t"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/CenterContainer/Control/Photo1:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/CenterContainer2/Control/Photo2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/CenterContainer3/Control/Photo3:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HBoxContainer/CenterContainer4/Control/Photo4:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_wv8ur"]
resource_name = "splash"
length = 2.0
step = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/CenterContainer/Control/Photo1:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-1000, -1, 0, 0.5, 0, 0, -0.5, 0, 0.5, 0, 1000, -0.5, 0, 1, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/CenterContainer2/Control/Photo2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1000, -1, 0, 0.5, 0, 0, -0.5, 0, 0.5, 0, -1000, -0.5, 0, 1, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/CenterContainer3/Control/Photo3:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-1000, -1, 0, 0.5, 0, 0, -0.5, 0, 0.5, 0, 1000, -0.5, 0, 1, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HBoxContainer/CenterContainer4/Control/Photo4:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1000, -1, 0, 0.5, 0, 0, -0.5, 0, 0.5, 0, -1000, -0.5, 0, 1, 0),
"times": PackedFloat32Array(0, 1, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_06xps"]
_data = {
"RESET": SubResource("Animation_cos0t"),
"splash": SubResource("Animation_wv8ur")
}

[node name="PhotoSplashScreen" type="CanvasLayer"]
script = ExtResource("1_6y58m")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_klajs")
expand_mode = 1
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_06xps")
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Photo1" type="Sprite2D" parent="HBoxContainer/CenterContainer/Control"]
unique_name_in_owner = true
modulate = Color(0.968627, 1, 0.341176, 1)
texture = ExtResource("2_ocw41")
region_rect = Rect2(0, 0, 256, 512)

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="HBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="Photo2" type="Sprite2D" parent="HBoxContainer/CenterContainer2/Control"]
unique_name_in_owner = true
modulate = Color(1, 0.282353, 1, 1)
texture = ExtResource("3_80f4q")
region_rect = Rect2(0, 0, 256, 512)

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="HBoxContainer/CenterContainer3"]
layout_mode = 2

[node name="Photo3" type="Sprite2D" parent="HBoxContainer/CenterContainer3/Control"]
unique_name_in_owner = true
modulate = Color(0.287385, 0.622187, 1, 1)
texture = ExtResource("4_8v0bh")
region_rect = Rect2(0, 0, 256, 512)

[node name="CenterContainer4" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="HBoxContainer/CenterContainer4"]
layout_mode = 2

[node name="Photo4" type="Sprite2D" parent="HBoxContainer/CenterContainer4/Control"]
unique_name_in_owner = true
modulate = Color(1, 0, 0.345098, 1)
texture = ExtResource("5_wcjt3")
region_rect = Rect2(0, 0, 256, 512)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -205.0
offset_top = -17.0
offset_right = 205.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2

[node name="Nametag" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 1200
text = "NAME"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
